@@ -1,3 +1,6 @@
+2011-05-26 Jeff McCune <jeff@puppetlabs.com> - 0.0.6
+* Remove test agent as per RIP's comment in IRC
+
 2011-05-26 Jeff McCune <jeff@puppetlabs.com> - 0.0.5
 * Add puppet agents (sudo mco puppetd status)
 
